[package]
name = "password_filter_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "password_filter"
crate-type = ["cdylib"]

[dependencies]
once_cell = "1.17.0"

[dependencies.windows]
version = "0.44.0"
features = [
    "Win32_Foundation"
]
